Add navigation links to Home and Crude Oil pages

--- a/stock_calculator_mobile.html
+++ b/stock_calculator_mobile.html
@@ -133,6 +133,10 @@
 <div class="app">
     <div class="header">
         <h1>📈 Stock Calculator</h1>
+        <div style="display: flex; justify-content: space-between; margin-top: 8px;">
+            <a href="index.html" style="color: white; text-decoration: none; font-size: 0.75em; opacity: 0.9;">🏠 Home</a>
+            <a href="crude_oil_calculator.html" style="color: white; text-decoration: none; font-size: 0.75em; opacity: 0.9;">🛢️ Crude Oil</a>
+        </div>
     </div>
     
     <div class="content">
