--- a/crude_oil_calculator.html
+++ b/crude_oil_calculator.html
@@ -180,6 +180,10 @@
     <div class="header">
         <h1>🛢️ Crude Oil Calculator</h1>
         <div class="subtitle">CRUDEOILM - Mini Contract</div>
+        <div style="display: flex; justify-content: space-between; margin-top: 6px;">
+            <a href="index.html" style="color: white; text-decoration: none; font-size: 0.7em; opacity: 0.9;">🏠 Home</a>
+            <a href="stock_calculator_mobile.html" style="color: white; text-decoration: none; font-size: 0.7em; opacity: 0.9;">📈 Stock</a>
+        </div>
     </div>
     
     <div class="content">
@@ -189,7 +193,7 @@
                 <span class="label-info">Per Barrel Entry Price</span>
             </label>
             <div class="price-container">
-                <input type="number" id="entryPrice" value="6000" step="0.1" oninput="calculate()">
+                <input type="number" id="entryPrice" value="100" step="0.1" oninput="calculate()">
                 <button class="clear-btn" onclick="clearEntry()">×</button>
             </div>
         </div>
@@ -199,7 +203,7 @@
                 Quantity (Lots)
                 <span class="label-info">1 Lot = 10 BBL (Barrels)</span>
             </label>
-            <input type="number" id="quantity" value="100" oninput="calculate()">
+            <input type="number" id="quantity" value="10" oninput="calculate()">
         </div>
 
         <div class="input-group">
@@ -207,7 +211,7 @@
                 Target Profit (₹)
                 <span class="label-info">Desired profit amount</span>
             </label>
-            <input type="number" id="targetAmount" value="1000" oninput="calculate()">
+            <input type="number" id="targetAmount" value="1500" oninput="calculate()">
         </div>
 
         <div class="results" id="results">
