--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
             margin: 0;
-            padding: 20px;
+            padding: 15px;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
         }
@@ -20,52 +20,53 @@
         .header {
             text-align: center;
             color: white;
-            margin-bottom: 40px;
+            margin-bottom: 25px;
         }
         .header h1 {
-            font-size: 2.5em;
+            font-size: 2.2em;
             margin: 0;
             text-shadow: 0 2px 4px rgba(0,0,0,0.3);
         }
         .header p {
-            font-size: 1.1em;
+            font-size: 1.0em;
             opacity: 0.9;
-            margin-top: 10px;
+            margin-top: 8px;
         }
         .calculators {
             display: grid;
-            gap: 20px;
-            margin-top: 30px;
+            gap: 15px;
+            margin-top: 20px;
         }
         .calc-card {
             background: white;
-            border-radius: 16px;
-            padding: 30px;
+            border-radius: 12px;
+            padding: 20px;
             text-decoration: none;
             color: inherit;
-            box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+            box-shadow: 0 6px 20px rgba(0,0,0,0.15);
             transition: all 0.3s ease;
-            border: 3px solid transparent;
+            border: 2px solid transparent;
         }
         .calc-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 35px rgba(0,0,0,0.2);
+            transform: translateY(-3px);
+            box-shadow: 0 10px 25px rgba(0,0,0,0.2);
             border-color: #667eea;
         }
         .calc-icon {
-            font-size: 3em;
-            margin-bottom: 15px;
+            font-size: 2.2em;
+            margin-bottom: 10px;
         }
         .calc-title {
-            font-size: 1.4em;
+            font-size: 1.2em;
             font-weight: 700;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
             color: #2c3e50;
         }
         .calc-description {
             color: #666;
-            line-height: 1.6;
-            margin-bottom: 15px;
+            line-height: 1.4;
+            margin-bottom: 12px;
+            font-size: 0.9em;
         }
         .calc-features {
             list-style: none;
@@ -73,9 +74,9 @@
             margin: 0;
         }
         .calc-features li {
-            padding: 4px 0;
+            padding: 3px 0;
             color: #555;
-            font-size: 0.9em;
+            font-size: 0.85em;
         }
         .calc-features li:before {
             content: "✓ ";
@@ -85,15 +86,41 @@
         .footer {
             text-align: center;
             color: white;
-            margin-top: 50px;
+            margin-top: 30px;
             opacity: 0.8;
         }
         @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
             .header h1 {
-                font-size: 2em;
+                font-size: 1.8em;
+            }
+            .header p {
+                font-size: 0.9em;
             }
             .calc-card {
-                padding: 20px;
+                padding: 15px;
+            }
+            .calc-icon {
+                font-size: 1.8em;
+                margin-bottom: 8px;
+            }
+            .calc-title {
+                font-size: 1.1em;
+                margin-bottom: 6px;
+            }
+            .calc-description {
+                font-size: 0.85em;
+                margin-bottom: 10px;
+            }
+            .calc-features li {
+                font-size: 0.8em;
+                padding: 2px 0;
+            }
+            .footer {
+                margin-top: 20px;
+                font-size: 0.85em;
             }
         }
     </style>
