--- a/crude_oil_calculator.html
+++ b/crude_oil_calculator.html
@@ -222,8 +222,11 @@
     <div class="header">
         <h1>🛢️ Crude Oil Calculator</h1>
         <div class="subtitle">CRUDEOILM - Mini Contract</div>
-        <div style="display: flex; justify-content: space-between; margin-top: 6px;">
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 6px; flex-wrap: wrap; gap: 5px;">
             <a href="index.html" style="color: white; text-decoration: none; font-size: 0.7em; opacity: 0.9;">🏠 Home</a>
+            <a href="#" onclick="window.open('https://www.tradingview.com/chart/LeJ9b8NX/?symbol=NYMEX%3ACL1%21', '_blank', 'noopener,noreferrer'); return false;" style="color: white; text-decoration: none; font-size: 0.7em; opacity: 0.9;">📈 CL1!</a>
+            <a href="#" onclick="window.open('https://www.tradingview.com/chart/LeJ9b8NX/?symbol=TVC%3AUSOIL', '_blank', 'noopener,noreferrer'); return false;" style="color: white; text-decoration: none; font-size: 0.7em; opacity: 0.9;">📈 USOIL</a>
+            <a href="#" onclick="window.open('https://www.tradingview.com/chart/LeJ9b8NX/?symbol=MCX%3ACRUDEOILM1%21', '_blank', 'noopener,noreferrer'); return false;" style="color: white; text-decoration: none; font-size: 0.7em; opacity: 0.9;">📈 CRUDEOILM1!</a>
             <a href="stock_calculator_mobile.html" style="color: white; text-decoration: none; font-size: 0.7em; opacity: 0.9;">📈 Stock</a>
         </div>
     </div>
