--- a/stock_calculator_mobile.html
+++ b/stock_calculator_mobile.html
@@ -153,8 +153,10 @@
 <div class="app">
     <div class="header">
         <h1>📈 Stock Calculator</h1>
-        <div style="display: flex; justify-content: space-between; margin-top: 8px;">
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 8px; flex-wrap: wrap; gap: 5px;">
             <a href="index.html" style="color: white; text-decoration: none; font-size: 0.75em; opacity: 0.9;">🏠 Home</a>
+            <a href="#" onclick="window.open('https://www.tradingview.com/chart/LeJ9b8NX/?symbol=NSE%3ANIFTY', '_blank', 'noopener,noreferrer'); return false;" style="color: white; text-decoration: none; font-size: 0.75em; opacity: 0.9;">📈 NIFTY50</a>
+            <a href="#" onclick="window.open('https://www.tradingview.com/chart/LeJ9b8NX/?symbol=NSEIX%3ANIFTY1%21', '_blank', 'noopener,noreferrer'); return false;" style="color: white; text-decoration: none; font-size: 0.75em; opacity: 0.9;">📈 GIFT</a>
             <a href="crude_oil_calculator.html" style="color: white; text-decoration: none; font-size: 0.75em; opacity: 0.9;">🛢️ Crude Oil</a>
         </div>
     </div>
