added NATGAS and brokerage cal link
added NATGAS and brokerage cal link

--- a/index.html
+++ b/index.html
@@ -133,33 +133,23 @@
         <p>Professional tools for stock and commodity trading analysis</p>
     </div>
 
-    <div class="calculators">
-        <a href="stock_calculator_mobile.html" class="calc-card">
-            <div class="calc-icon">📈</div>
-            <div class="calc-title">Stock Trading Calculator</div>
-            <div class="calc-description">
-                Calculate investment amounts, target prices, and profit scenarios for stock trading.
-            </div>
-            <ul class="calc-features">
-                <li>Support for lots and individual shares</li>
-                <li>Automatic profit/loss calculations</li>
-                <li>6% and 10% target scenarios</li>
-                <li>Real-time calculations</li>
-            </ul>
+    <div class="calculators" style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; margin-top: 20px;">
+        <a href="stock_calculator_mobile.html" class="calc-card" style="padding: 15px; text-align: center;">
+            <div class="calc-icon" style="font-size: 2em; margin-bottom: 8px;">📈</div>
+            <div class="calc-title" style="font-size: 0.9em; margin-bottom: 6px;">Stock Calculator</div>
+            <div style="font-size: 0.7em; color: #666; line-height: 1.3;">Calculate stock trading profits & targets</div>
         </a>
 
-        <a href="crude_oil_calculator.html" class="calc-card">
-            <div class="calc-icon">🛢️</div>
-            <div class="calc-title">Crude Oil Calculator</div>
-            <div class="calc-description">
-                Analyze CRUDEOILM contracts and calculate required price movements for target profits.
-            </div>
-            <ul class="calc-features">
-                <li>CRUDEOILM mini contract support</li>
-                <li>₹10 per ₹1 movement calculation</li>
-                <li>Target profit analysis</li>
-                <li>Percentage movement display</li>
-            </ul>
+        <a href="crude_oil_calculator.html" class="calc-card" style="padding: 15px; text-align: center;">
+            <div class="calc-icon" style="font-size: 2em; margin-bottom: 8px;">🛢️</div>
+            <div class="calc-title" style="font-size: 0.9em; margin-bottom: 6px;">Crude Oil Calculator</div>
+            <div style="font-size: 0.7em; color: #666; line-height: 1.3;">CRUDEOIL & CRUDEOILM contracts</div>
+        </a>
+
+        <a href="natural_gas_calculator.html" class="calc-card" style="padding: 15px; text-align: center;">
+            <div class="calc-icon" style="font-size: 2em; margin-bottom: 8px;">💨</div>
+            <div class="calc-title" style="font-size: 0.9em; margin-bottom: 6px;">Natural Gas Calculator</div>
+            <div style="font-size: 0.7em; color: #666; line-height: 1.3;">NATURALGAS & NATGASMINI contracts</div>
         </a>
     </div>
 
