--- a/stock_calculator_mobile.html
+++ b/stock_calculator_mobile.html
@@ -152,12 +152,16 @@
 
 <div class="app">
     <div class="header">
-        <h1>📈 Stock Calculator</h1>
-        <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 8px; flex-wrap: wrap; gap: 5px;">
-            <a href="index.html" style="color: white; text-decoration: none; font-size: 0.75em; opacity: 0.9;">🏠 Home</a>
-            <a href="#" onclick="window.open('https://www.tradingview.com/chart/LeJ9b8NX/?symbol=NSE%3ANIFTY', '_blank', 'noopener,noreferrer'); return false;" style="color: white; text-decoration: none; font-size: 0.75em; opacity: 0.9;">📈 NIFTY50</a>
-            <a href="#" onclick="window.open('https://www.tradingview.com/chart/LeJ9b8NX/?symbol=NSEIX%3ANIFTY1%21', '_blank', 'noopener,noreferrer'); return false;" style="color: white; text-decoration: none; font-size: 0.75em; opacity: 0.9;">📈 GIFT</a>
-            <a href="crude_oil_calculator.html" style="color: white; text-decoration: none; font-size: 0.75em; opacity: 0.9;">🛢️ Crude Oil</a>
+        <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 8px; position: relative;">
+            <a href="index.html" style="position: absolute; left: 0; color: white; text-decoration: none; font-size: 2.5em; opacity: 0.9;">🏠</a>
+            <h1 style="margin: 0; font-size: 1.2em;">📈 Stock Calculator</h1>
+            <a href="#" onclick="window.open('https://zerodha.com/brokerage-calculator/#tab-equities', '_blank', 'noopener,noreferrer'); return false;" style="color: white; text-decoration: none; font-size: 2.5em; opacity: 0.9;">🧮</a>
+        </div>
+        <div style="display: flex; justify-content: center; align-items: center; flex-wrap: wrap; gap: 8px;">
+            <a href="#" onclick="window.open('https://www.tradingview.com/chart/LeJ9b8NX/?symbol=NSE%3ANIFTY', '_blank', 'noopener,noreferrer'); return false;" style="color: white; text-decoration: none; font-size: 0.7em; opacity: 0.9;">📈 NIFTY50</a>
+            <a href="#" onclick="window.open('https://www.tradingview.com/chart/LeJ9b8NX/?symbol=NSEIX%3ANIFTY1%21', '_blank', 'noopener,noreferrer'); return false;" style="color: white; text-decoration: none; font-size: 0.7em; opacity: 0.9;">📈 GIFT</a>
+            <a href="crude_oil_calculator.html" style="color: white; text-decoration: none; font-size: 0.7em; opacity: 0.9;">🛢️ Crude Oil</a>
+            <a href="natural_gas_calculator.html" style="color: white; text-decoration: none; font-size: 0.7em; opacity: 0.9;">💨 Natural Gas</a>
         </div>
     </div>
     
