--- a/crude_oil_calculator.html
+++ b/crude_oil_calculator.html
@@ -269,11 +269,11 @@
                         <input type="number" id="targetAmount" value="1500" step="100" oninput="calculate()">
                     </div>
                     <div id="changeField" style="display: none; position: relative;">
-                        <input type="number" id="changePoint" value="6" step="0.1" placeholder="±0.0" oninput="calculate()">
+                        <input type="number" id="changePoint" value="5" step="0.5" placeholder="±0.0" oninput="calculate()">
                         <button class="clear-btn" onclick="clearChange()">×</button>
                     </div>
                     <div id="priceField" style="display: none; position: relative;">
-                        <input type="number" id="targetPriceInput" value="106" step="0.1" placeholder="Target Price" oninput="calculate()">
+                        <input type="number" id="targetPriceInput" value="106" step="0.5" placeholder="Target Price" oninput="calculate()">
                         <button class="clear-btn" onclick="clearTargetPrice()">×</button>
                     </div>
                 </div>
@@ -282,11 +282,11 @@
                     <label style="margin-bottom: 4px; font-size: 0.75em; color: #333; font-weight: 600;">Mode</label>
                     <div style="display: flex; flex-direction: column; gap: 1px; justify-content: center; height: 50px;">
                         <div style="display: flex; align-items: center; gap: 2px;">
-                            <input type="radio" id="targetMode" name="calculationMode" value="target" checked onchange="toggleMode(); calculate();" style="margin: 0; width: 10px; height: 10px;">
+                            <input type="radio" id="targetMode" name="calculationMode" value="target" onchange="toggleMode(); calculate();" style="margin: 0; width: 10px; height: 10px;">
                             <label for="targetMode" style="margin: 0; font-size: 0.6em; color: #666; font-weight: 500; white-space: nowrap;">Target ₹</label>
                         </div>
                         <div style="display: flex; align-items: center; gap: 2px;">
-                            <input type="radio" id="changeMode" name="calculationMode" value="change" onchange="toggleMode(); calculate();" style="margin: 0; width: 10px; height: 10px;">
+                            <input type="radio" id="changeMode" name="calculationMode" value="change" checked onchange="toggleMode(); calculate();" style="margin: 0; width: 10px; height: 10px;">
                             <label for="changeMode" style="margin: 0; font-size: 0.6em; color: #666; font-weight: 500; white-space: nowrap;">Change ₹</label>
                         </div>
                         <div style="display: flex; align-items: center; gap: 2px;">
