--- a/stock_calculator_mobile.html
+++ b/stock_calculator_mobile.html
@@ -169,7 +169,7 @@
         <div class="input-group">
             <div class="input-row" style="display: grid; grid-template-columns: 1fr 0.6fr 0.8fr 1.2fr 0.8fr; gap: 6px; align-items: end;">
                 <div class="input-field">
-                    <label for="price">Stock Price (₹)</label>
+                    <label for="price">Stock Price</label>
                     <div class="price-container">
                         <input type="number" id="price" value="100" step="0.01" oninput="calc()">
                         <button class="clear-btn" onclick="clearPrice()">×</button>
@@ -193,10 +193,10 @@
                     <label for="targetAmount">Target/Change/Price</label>
                     <div id="targetField" style="position: relative;">
                         <button class="clear-btn" onclick="clearTarget()">×</button>
-                        <input type="number" id="targetAmount" value="2250" step="100" oninput="calc()">
+                        <input type="number" id="targetAmount" value="1500" step="100" oninput="calc()">
                     </div>
                     <div id="changeField" style="display: none; position: relative;">
-                        <input type="number" id="changePercent" value="10" step="0.1" placeholder="±0.0%" oninput="calc()">
+                        <input type="number" id="changePercent" value="6" step="0.1" placeholder="±0.0%" oninput="calc()">
                         <button class="clear-btn" onclick="clearChange()">×</button>
                     </div>
                     <div id="priceField" style="display: none; position: relative;">
